--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/abnerlimaab/estrutura-de-dados-js.git",
-  "author": "Abner Lima <abnerlima@pmenos.com.br>",
+  "author": "Abner Lima <abnerlima.1997@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
